--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Mi primera prueba</h1>
+    <h1>Lista de Reservas</h1>
     <button onclick="verFormulario()" class="btn btn-primary m-4">Agregar</button>
     <div id="divReserva">
 
