--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -7,17 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva Aula</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="../files/js/index.js"></script>
 </head>
 
 <body>
-    <h1>Lista de Reservas</h1>
-    <button onclick="verFormulario()" class="btn btn-primary m-4">Agregar</button>
+    <header>
+        <h1><a href="reserva.html">Lista de Reservas</a></h1>
+        <nav>
+           <button onclick="verFormulario()" class="btn btn-dark">Agregar reserva</button> 
+        </nav>
+    </header>    
     <div id="divReserva">
-
+        
     </div>
     <div id="divFormulario" style="position:fixed; top:0;left:0;
-width:100%; height:100%; background-color: white; display:none;">
+width:100%; display:none;">
         <div class="col-md-6 m-auto">
             <h1>Formulario</h1>
             <div class="form-group">
@@ -45,7 +50,7 @@ width:100%; height:100%; background-color: white; display:none;">
                 <input type="text" id="txtHoraHasta" class="form-control">
             </div>
             <div>
-                <button onclick="enviarDatos()" class="btn btn-primary">
+                <button onclick="enviarDatos()" class="btn btn-success">
                     Aceptar
                 </button>
                 <button onclick="ocultarFormulario()" class="btn btn-danger">
